@@ -1,0 +1,1 @@
+This directory should contain jars for building and running MapKeeper
